# velm

./: Cargo.toml
velm_core/: Cargo.toml
velm_core/src/: backend.rs  communication.rs  component.rs  document.rs  editor.rs  input.rs  lib.rs  mode.rs  render.rs  row.rs  ui.rs
velm_core/src/component/: buffer.rs  mod.rs  status_bar.rs  text_input.rs  welcome.rs  window.rs
velm_tui/: Cargo.toml
velm_tui/src/: lib.rs  main.rs
velm_webui/: Cargo.toml
