[package]
name = "velm_tui"
version = "0.1.0"
authors = ["Nick Bryan <nickbryan.dev@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
backtrace = "0.3"
crossterm = { version = "0.22", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1.13", features = ["full"] }
tokio-stream = "0.1"
velm_core = { version = "0.1.0", path = "../velm_core" }